--- a/email-templates/offer-claim/index.html
+++ b/email-templates/offer-claim/index.html
@@ -11,12 +11,31 @@
 				font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 			}
 
+			/* Structure */
+
 			.artwork_box{
 				height: 146px;
 				background-color: #FDA700;
 				padding: 5px;
 				margin-right: 5px;
 			}
+
+
+			.sim_box{
+				width:150px;
+				height:150px; 
+				background-color: #000;
+				vertical-align: top;
+			}
+
+			.deal_box{
+				width: 300px;
+				height: 400px;
+				background-color: #000;
+				vertical-align: top;
+			}
+
+			/* Buttons */
 
 			.dl_button {
 				-moz-box-shadow:inset 0px 1px 0px 0px #f9eca0;
@@ -67,18 +86,21 @@
 			}
 
 			h3.artist_name{
+				font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+				font-size: 14px;
+				color: #FDA700;
+				font-weight: bold;
+				line-height: 5px;
+				margin-top: 160px;
 
 			}
 
 			h3.song_title{
-
-			}
-
-			.sim_box{
-				width:150px;
-				height:150px; 
-				background-color: #000;
-				vertical-align: top;
+				font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+				font-size: 13px;
+				color: #bbb;
+				font-weight: normal;
+				line-height: 5px;
 			}
 		</style>
 	</head>
@@ -142,18 +164,115 @@
 						<table width="628" border="0" cellspacing="15" cellpadding="10">
 							<tbody>
 								<tr>
-									<td class="sim_box"></td>
-									<td class="sim_box"></td>
-									<td class="sim_box"></td>
-									<td class="sim_box"></td>
+									<td class="sim_box">
+										<table>
+											<tbody>
+												<tr>
+													<td></td>
+												</tr>
+												<tr>
+													<td>
+														<h3 class="artist_name">	Artist Name
+														</h3>
+														<h3 class="song_title">
+											Song Title
+														</h3>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+
+									</td>
+
+									<td class="sim_box">
+										<table>
+											<tbody>
+												<tr>
+													<td></td>
+												</tr>
+												<tr>
+													<td>
+														<h3 class="artist_name">	Artist Name
+														</h3>
+														<h3 class="song_title">
+											Song Title
+														</h3>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+
+									</td>
+									<td class="sim_box">
+										<table>
+											<tbody>
+												<tr>
+													<td></td>
+												</tr>
+												<tr>
+													<td>
+														<h3 class="artist_name">	Artist Name
+														</h3>
+														<h3 class="song_title">
+											Song Title
+														</h3>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+
+									</td>
+									<td class="sim_box">
+										<table>
+											<tbody>
+												<tr>
+													<td></td>
+												</tr>
+												<tr>
+													<td>
+														<h3 class="artist_name">	Artist Name
+														</h3>
+														<h3 class="song_title">
+											Song Title
+														</h3>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+
+									</td>
+								</tr>
+								
+							</tbody>
+						</table>
+					</td>
+					
+				</tr>
+				<tr>
+					<td height="15px"></td>
+				</tr>
+				<tr>
+					<td style="text-align:center;">
+						<h1 class="songs">Awesome Deals Near You</h1>
+					</td>
+				</tr>
+				<tr>
+					<td height="25px"></td>
+				</tr>
+
+				<!-- Relevant Deals -->
+				<tr>
+					<td>
+						<table width="628" border="0" cellspacing="15" cellpadding="10">
+							<tbody>
+								<tr>
+									<td class="deal_box"></td>
+									<td class="deal_box"></td>
 								</tr>
 							</tbody>
 						</table>
 					</td>
 				</tr>
-
-				<!-- Relevant Deals -->
-				<tr></tr>
 			</tbody>
 		</table>
 			
