Added deals stub info

--- a/email-templates/offer-claim/index.html
+++ b/email-templates/offer-claim/index.html
@@ -102,6 +102,14 @@
 				font-weight: normal;
 				line-height: 5px;
 			}
+
+			h3.deal_text{
+				font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+				font-size: 13px;
+				color: #bbb;
+				font-weight: normal;
+				line-height: 5px;
+			}
 		</style>
 	</head>
 	<body>
@@ -266,8 +274,40 @@
 						<table width="628" border="0" cellspacing="15" cellpadding="10">
 							<tbody>
 								<tr>
-									<td class="deal_box"></td>
-									<td class="deal_box"></td>
+									<td class="deal_box">
+										<table>
+											<tbody>
+												<tr>
+													<td></td>
+												</tr>
+												<tr>
+													<td>
+														<h3 class="deal_text">Picture</h3>
+														<h3 class="deal_text">Deal Title</h3>
+														<h3 class="deal_text">Deal Description</h3>
+														<h3 class="deal_text">Price</h3>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</td>
+									<td class="deal_box">
+										<table>
+											<tbody>
+												<tr>
+													<td></td>
+												</tr>
+												<tr>
+													<td>
+														<h3 class="deal_text">Picture</h3>
+														<h3 class="deal_text">Deal Title</h3>
+														<h3 class="deal_text">Deal Description</h3>
+														<h3 class="deal_text">Price</h3>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</td>
 								</tr>
 							</tbody>
 						</table>
