Added location prompting to the demo app

--- a/js-offers-client/assets/index.html
+++ b/js-offers-client/assets/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="backbone-min.js"></script>
     <script type="text/javascript" src="offer-model.js"></script>
     <script type="text/javascript" src="virtual-good-model.js"></script>
+    <script type="text/javascript" src="user-location-model.js"></script>
     <script type="text/javascript" src="initial-prompt-view.js"></script>
     <script type="text/javascript" src="claim-view.js"></script>
     <script type="text/javascript" src="thanks-view.js"></script>
@@ -44,7 +45,7 @@
         <div class="thanks_text">Thank You! Your song is on the way</div>
         <button class="btn getmore">Get More Offers</button>
       </script>
-    <iframe id="apiframe" src="http://api.klickpush.com/apiframe" style="display:none" />
+    <iframe id="apiframe" src="http://client.klickpush.com:3000/apiframe" style="display:none" />
   </body>
 </html>
 
