Pointing at production; updated to use new demo keys.

--- a/js-offers-client/assets/index.html
+++ b/js-offers-client/assets/index.html
@@ -45,7 +45,7 @@
         <div class="thanks_text">Thank You! Your song is on the way</div>
         <button class="btn getmore">Get More Offers</button>
       </script>
-    <iframe id="apiframe" src="http://client.klickpush.com:3000/apiframe" style="display:none" />
+    <iframe id="apiframe" src="http://api.klickpush.com/apiframe" style="display:none" />
   </body>
 </html>
 
