Added song playback to demo app

--- a/js-offers-client/assets/index.html
+++ b/js-offers-client/assets/index.html
@@ -4,7 +4,11 @@
     <title>Klickpush Offers Demo</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="demo.css" rel="stylesheet">
+    <link href="360player.css" rel="stylesheet">
     <script type="text/javascript" src="jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="soundmanager2-jsmin.js"></script>
+    <script type="text/javascript" src="berniecode-animator.js"></script>
+    <script type="text/javascript" src="360player.js"></script>
     <script type="text/javascript" src="mustache.js"></script>
     <script type="text/javascript" src="underscore-min.js"></script>
     <script type="text/javascript" src="backbone-min.js"></script>
@@ -28,6 +32,7 @@
         <div class="offer_text"></div>
         <div class="vgood_offer"></div>
         <div class="song_offer"></div>
+        <div class="song_player"></div>
         <button class="btn generate">Generate</button>
         <button class="btn claim">Claim</button>
       </script>
