--- a/AngelJump/index.html
+++ b/AngelJump/index.html
@@ -1,23 +1,35 @@
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Angel Jump</title>
-	<style>
-		body {
-			margin:0px;
-			padding:0px;
-			text-align:center;
-		}
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="scripts/game.js"></script>
+    <script type="text/javascript">
+
+    $(document).ready(function() {
+      window.gameStart()
+    });
+
+    </script>
+  	<style>
+	    body {
+		  	margin:0px;
+			  padding:0px;
+  			text-align:center;
+	  	}
 		
-		canvas{
-			outline:0;
-			border:1px solid #000;
-			margin-left: auto;
-			margin-right: auto;
-		}
-	</style>
-</head>
-<body>
-<canvas id='c'></canvas>
-<script src="game.js"></script>
-</body>
+		  canvas {
+  			outline:0;
+	  		border:1px solid #000;
+		  	margin-left: auto;
+			  margin-right: auto;
+  		}
+	  </style>
+  </head>
+
+  <body>
+    <canvas id='c'></canvas>
+  </body>
 </html>
+
