--- a/AngelJump/assets/index.html
+++ b/AngelJump/assets/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <title>Angel Jump</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script type="text/javascript" src="fancybox/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/game.js"></script>
 
     <script type="text/javascript" src="mustache.js"></script>
@@ -17,19 +22,11 @@
     <script type="text/javascript" src="thanks-view.js"></script>
     <script type="text/javascript" src="offers-router.js"></script>
 
-
-    <link type="text/css" rel="stylesheet" href="fancybox/jquery.fancybox.css"  media="screen" />
     <script type="text/javascript">
       $(document).ready(function() {
         // For Klickpush portion of demo
         window.klickpushRouter = new OffersRouter();
         Backbone.history.start();
-
-        $("#inline").fancybox({
-          autoSize: false,
-          height: 500,
-          width: 500
-        });
 
         window.gameStart();
       });
@@ -53,10 +50,20 @@
 
   <body>
     <canvas id='c'></canvas>
-    <!-- Fancybox postgame overlay -->
-    <div style="display:none">
-      <a id="inline" href="#klickpush">Hidden fancybox trigger (called in code)</a>
-      <div id="klickpush">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+
+    <!-- Klickpush modal window -->
+    <div class="modal" id="kpModal" tabindex="-1" role="dialog" style="display:none">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" data-target="#kpModal">×</button>
+        <h3 id="kpModalLabel">Get your Klickpush offer</h3>
+      </div>
+      <div class="modal-body" id="klickpush">
+        <p>One fine body…</p>
+      </div>
+
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal">Close</button>
+      </div>
     </div>
 
     <!-- Klickpush, mf -->
