Got immediate offer loads to work

--- a/AngelJump/assets/index.html
+++ b/AngelJump/assets/index.html
@@ -67,6 +67,10 @@
     </div>
 
     <!-- Klickpush, mf -->
+    <script type="template/mustache" id="gettingOfferTemplate">
+      <p>Getting offer</p>
+    </script>
+
     <script type="template/mustache" id="initialPromptTemplate">
       <div class="offer_text"></div>
       <div class="vgood_offer"></div>
@@ -75,6 +79,7 @@
       <button class="btn generate">Generate</button>
       <button class="btn claim">Claim</button>
     </script>
+
     <script type="template/mustache" id="claimViewTemplate">
       <div class="offer_text">Claim your offer</div>
       <div class="vgood_offer"><img src="virtual_good_images/{{vgoodImgSrc}}" alt="{{vgoodName}}" />
